# monad-bft

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  restart.sh  start.sh  stop.sh  test_run.sh
biyachain-lib/: libblake3.so.0
docker/devnet/: Dockerfile  Dockerfile.fast  Dockerfile.runtime  README.md  compose.yaml
docker/devnet/monad/config/: node.toml  validators.toml.1
docs/: cosmos-txpool-prevent-duplicate-proposals.md  monad-bench-quickstart.md  monad-cosmos-abci-debugging.md
monad-abci-client/: Cargo.toml  README.md
monad-abci-client/src/: consensus.rs  error.rs  lib.rs  mempool.rs  query.rs  snapshot.rs
monad-abci-client/src/transport/: grpc.rs  mod.rs  socket.rs
monad-blocksync/src/: blocksync.rs
monad-blocktree/src/: blocktree.rs  tree.rs
monad-chain-config/src/: lib.rs  revision.rs
monad-chain-data/src/kernel/: bitmap.rs  tables.rs
monad-chain-data/src/store/: mod.rs
monad-chain-data/src/store/blob/: in_memory.rs  mod.rs
monad-chain-data/src/store/meta/: in_memory.rs  mod.rs
monad-chain-data/tests/: log_bitmap_pages.rs
monad-cometbft-proto/: Cargo.toml  build.rs
monad-cometbft-proto/proto/gogoproto/: gogo.proto
monad-cometbft-proto/src/: lib.rs
monad-consensus-state/: Cargo.toml
monad-consensus-state/src/: command.rs  lib.rs  vote_delay_metrics.rs
monad-consensus-types/src/: block.rs  block_validator.rs  metrics.rs
monad-consensus/src/: pacemaker.rs
monad-cosmos-block-policy/: Cargo.toml
monad-cosmos-block-policy/src/: lib.rs
monad-cosmos-integration/: Cargo.toml
monad-cosmos-integration/examples/: debug_abci_first_block.rs  debug_abci_init.rs
monad-cosmos-integration/src/: cosmos_txpool_ipc.rs  indexed_cosmos_mempool.rs  lib.rs
monad-cosmos-ledger/: Cargo.toml
monad-cosmos-ledger/src/: lib.rs
monad-cosmos-types/: Cargo.toml
monad-cosmos-types/src/: lib.rs
monad-debug-node/src/: main.rs
monad-eth-block-policy/src/: lib.rs
monad-eth-block-validator/src/: lib.rs
monad-eth-txpool-executor/: Cargo.toml
monad-eth-txpool-executor/src/: client.rs  forward.rs  lib.rs  scripted.rs
monad-eth-txpool-executor/tests/: scripted.rs
monad-eth-txpool-ipc/src/: lib.rs
monad-eth-txpool/src/pool/: mod.rs
monad-eth-txpool/src/pool/tracked/: mod.rs
monad-eth-types/src/: lib.rs
monad-ethcall/src/: lib.rs
monad-executor-glue/src/: lib.rs
monad-fair-queue/: Cargo.toml
monad-fair-queue/benches/: queue_bench.rs
monad-fair-queue/src/: lib.rs  pool.rs  queue.rs
monad-node/: Cargo.toml
monad-node-config/: Cargo.toml
monad-node-config/src/: bootstrap.rs  lib.rs  raptorcast.rs
monad-node/examples/: ledger-tail.rs
monad-node/src/: main.rs
monad-peer-discovery/: Cargo.toml
monad-peer-discovery/examples/: sign-name-record.rs
monad-peer-discovery/src/: discovery.rs  lib.rs  mock.rs
monad-peer-discovery/src/snapshots/: monad_peer_discovery__tests__name_record_encoded.snap
monad-performance-monitor/: Cargo.toml  README.md
monad-performance-monitor/monitor/grafana/: grafana-block-performance.json
monad-performance-monitor/monitor/server/: docker-compose.loki.yml  loki.yaml  promtail.yaml
monad-performance-monitor/src/: lib.rs
monad-raptorcast/examples/: latency.rs  service.rs
monad-raptorcast/src/: commit.rs  decoding.rs  lib.rs  message.rs  metrics.rs  udp.rs  util.rs  v1_rollout.rs
monad-raptorcast/src/auth/: socket.rs
monad-raptorcast/src/packet/: builder.rs  deterministic.rs  regular.rs
monad-raptorcast/src/parser/: packet_parser.rs
monad-raptorcast/src/raptorcast_secondary/: client.rs
monad-raptorcast/tests/: raptorcast_instance.rs  wireauth_raptorcast.rs
monad-router-multi/src/: lib.rs
monad-rpc/: Cargo.toml
monad-rpc/src/: cli.rs  lib.rs  main.rs
monad-rpc/src/handlers/: mod.rs
monad-rpc/src/node_rpc/: mod.rs  resources.rs  server.rs  types.rs
monad-rpc/src/node_rpc/handlers/: broadcast_tx.rs  mod.rs
monad-scripts/jenkins/: prometheus_metrics.sh
monad-scripts/monitoring/: docker-compose.yml  push-bench-metrics.sh
monad-scripts/monitoring/grafana/dashboards/: criterion-bench.json
monad-scripts/monitoring/grafana/provisioning/dashboards/: default.yml
monad-scripts/monitoring/prometheus/: prometheus.yml
monad-scripts/python/log/: monad_bft.py
monad-state/: Cargo.toml
monad-state-backend-cache/src/: lib.rs
monad-state-backend/src/: in_memory.rs  lib.rs  mock.rs  thread.rs
monad-state/src/: blocksync.rs  consensus.rs  lib.rs
monad-statesync-executor/: Cargo.toml
monad-statesync-executor/src/: lib.rs
monad-testground/src/: executor.rs
monad-twins/utils/src/: twin_reader.rs
monad-txpool/: Cargo.toml
monad-txpool/examples/: debug_abci_first_block.rs  debug_abci_init.rs
monad-txpool/src/: abci.rs  comet_mempool_rpc.rs  commit_store.rs  executor.rs  forward.rs  ipc.rs  lib.rs  mempool.rs
monad-types/src/: lib.rs
monad-updaters/src/: config_loader.rs  parent.rs  statesync.rs  txpool.rs
script-ansible/: Makefile  README.md  ansible.cfg
script-ansible/artifacts/: .gitignore
script-ansible/inventory/: hosts.ini  hosts.ini.example
script-ansible/inventory/group_vars/: all.yml  coordinator.yml
script-ansible/inventory/group_vars/validators/: main.yml  password.yml.example
script-ansible/playbooks/: 01-local-init.yml  02-deploy.yml  03-start.yml  04-stress-local.yml  05-stop.yml  06-status.yml  site.yml
script-ansible/playbooks/tasks/: apply-sysctl.yml  build-p2p-map.yml
script-ansible/roles/common/tasks/: main.yml
script-ansible/roles/monad-bin/tasks/: main.yml
script-ansible/roles/monad-bin/templates/: monad-bench-env.sh.j2
script-ansible/roles/monad-health/tasks/: main.yml
script-ansible/roles/monad-node-data/tasks/: main.yml
script-ansible/roles/monad-process/tasks/: main.yml
scripts/: 0_monad-stress-bench.sh  cosmos_abci_diagnose.sh  cosmos_monad_genesis_tx_example.sh  gen-validators-toml.sh  monad-stress-bench.sh  mult-run.sh  run.sh
