[package]
name = "monad-cosmos-integration"
version = "0.1.0"
edition = "2021"
description = "Cosmos ABCI integration pieces for Monad consensus"

[[bin]]
name = "cosmos-txpool-feed"
path = "src/bin/cosmos_txpool_feed.rs"

[dependencies]
monad-blocksync = { workspace = true }
monad-block-persist = { workspace = true }
monad-chain-config = { workspace = true }
monad-cometbft-proto = { workspace = true }
monad-consensus-types = { workspace = true }
monad-cosmos-types = { workspace = true }
monad-crypto = { workspace = true }
monad-eth-types = { workspace = true }
monad-executor = { workspace = true }
monad-executor-glue = { workspace = true }
monad-multi-sig = { workspace = true }
monad-performance-monitor = { workspace = true }
monad-state-backend = { workspace = true }
monad-types = { workspace = true }
monad-validator = { workspace = true }

alloy-rlp = { workspace = true, features = ["arrayvec"] }
alloy-primitives = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tonic = { workspace = true, features = ["transport"] }
tracing = { workspace = true }
