[package]
name = "monad-peer-discovery"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sign-name-record"
path = "src/bin/sign-name-record.rs"
bench = false

[dependencies]
monad-crypto = { workspace = true }
monad-executor = { workspace = true }
monad-executor-glue = { workspace = true }
monad-keystore = { workspace = true }
monad-node-config = { workspace = true, features = ["crypto"] }
monad-secp = { workspace = true }
monad-types = { workspace = true }

alloy-rlp = { workspace = true }
arrayvec = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
governor = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true, features = ["time"] }
toml = { workspace = true }

[dev-dependencies]
monad-testutil = { workspace = true }

insta = { workspace = true }
rstest = { workspace = true }
test-case = { workspace = true }
