[package]
name = "monad-txpool"
version = "0.1.0"
edition = "2021"
description = "Cosmos txpool executor and ABCI-backed txpool utilities for Monad consensus"

[[bin]]
name = "cosmos-txpool-feed"
path = "src/bin/cosmos_txpool_feed.rs"

[dependencies]
monad-abci-client = { workspace = true }
monad-chain-config = { workspace = true }
monad-cometbft-proto = { workspace = true }
monad-consensus-types = { workspace = true }
monad-cosmos-types = { workspace = true }
monad-crypto = { workspace = true }
monad-executor = { workspace = true }
monad-executor-glue = { workspace = true }
monad-performance-monitor = { workspace = true }
monad-state-backend = { workspace = true }
monad-types = { workspace = true }
monad-validator = { workspace = true }

actix-web = { workspace = true }
alloy-rlp = { workspace = true, features = ["arrayvec"] }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
